refactor(Input): 코드 리팩토링
- 필요없는 호출 삭제
- createOrder 로직 수정